--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -19,5 +19,10 @@
         android:id="@+id/dump"
         android:orderInCategory="102"
         android:title="Dump Database" />
+    <item
+
+        android:id="@+id/map"
+        android:orderInCategory="103"
+        android:title="Route-builder" />
 
 </menu>
