--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
    xmlns:tools="http://schemas.android.com/tools"
 
@@ -18,7 +17,7 @@
 
         android:id="@+id/dump"
         android:orderInCategory="102"
-        android:title="Dump Database" />
+        android:title="Offline text" />
     <item
 
         android:id="@+id/map"
