--- a/app/src/main/res/layout/activity_wifi_mvc.xml
+++ b/app/src/main/res/layout/activity_wifi_mvc.xml
@@ -37,14 +37,14 @@
 
     <TextView
         android:id="@+id/readMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="319dp"
+        android:layout_height="140dp"
         android:layout_below="@+id/peerListView"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="16dp"
         android:text="Message"
         android:textAlignment="center"
         android:textSize="20sp"
