App test 200OK, Menu Config @soumyadip007

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -25,7 +25,7 @@
             android:layout_weight="0.90"
             android:focusableInTouchMode="true"
             android:hint="@string/txt_hint"
-            android:visibility="visible"></EditText>
+            android:visibility="visible" />
     </LinearLayout>
 
     <ListView
